# tpustat

./: .gitignore  README.md  pyproject.toml  setup.py
tests/: conftest.py  test_cli.py  test_core.py
tpustat/: __main__.py  _shtab.py  cli.py  core.py
